--- a/package.json
+++ b/package.json
@@ -13,16 +13,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.2",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.13",
-    "@types/http-errors": "^1.8.1",
-    "@types/jest": "^29.5.1",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.182",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^20.12.0",
-    "@types/node-schedule": "^2.1.5"
+    "@types/node": "^20.12.0"
   }
 }
