update all runners with better documentation, add more challenges

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sir Gallo",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "lodash": "^4.17.21",
     "typescript": "^5.4.5"
   },
